force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMctsanslescoinslongueur2__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMctsanslescoinslongueur2__c</fullName>
    <formula>IF(
  Assechmur_Mur1longueur2__c +
  Assechmur_Mur1longueur2X2__c +
  Assechmur_Mur2longueur2__c +
  Assechmur_Mur2longueur2X2__c +
  Assechmur_Mur3longueur2__c +
  Assechmur_Mur3longueur2X2__c +
  Assechmur_Mur4longueur2__c +
  Assechmur_Mur4longueur2X2__c +
  Assechmur_Mur5longueur2__c +
  Assechmur_Mur5longueur2X2__c +
  Assechmur_Mur6longueur2__c +
  Assechmur_Mur6longueur2X2__c +
  Assechmur_Mur7longueur2__c +
  Assechmur_Mur7longueur2X2__c +
  Assechmur_Mur8longueur2__c +
  Assechmur_Mur8longueur2X2__c +
  Assechmur_BVI1longueur2__c +
  Assechmur_BVI2longueur2__c +
  Assechmur_BVI3longueur2__c +
  Assechmur_BVI4longueur2__c +
  Assechmur_BVI5longueur2__c +
  Assechmur_BVI6longueur2__c +
  Assechmur_BVI7longueur2__c +
  Assechmur_BVI8longueur2__c = 0,
  NULL,
  Assechmur_Mur1longueur2__c +
  Assechmur_Mur1longueur2X2__c +
  Assechmur_Mur2longueur2__c +
  Assechmur_Mur2longueur2X2__c +
  Assechmur_Mur3longueur2__c +
  Assechmur_Mur3longueur2X2__c +
  Assechmur_Mur4longueur2__c +
  Assechmur_Mur4longueur2X2__c +
  Assechmur_Mur5longueur2__c +
  Assechmur_Mur5longueur2X2__c +
  Assechmur_Mur6longueur2__c +
  Assechmur_Mur6longueur2X2__c +
  Assechmur_Mur7longueur2__c +
  Assechmur_Mur7longueur2X2__c +
  Assechmur_Mur8longueur2__c +
  Assechmur_Mur8longueur2X2__c +
  Assechmur_BVI1longueur2__c +
  Assechmur_BVI2longueur2__c +
  Assechmur_BVI3longueur2__c +
  Assechmur_BVI4longueur2__c +
  Assechmur_BVI5longueur2__c +
  Assechmur_BVI6longueur2__c +
  Assechmur_BVI7longueur2__c +
  Assechmur_BVI8longueur2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mct sans les coins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>