force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMctsanslescoinslongueur3__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMctsanslescoinslongueur3__c</fullName>
    <formula>IF(
  Assechmur_Mur1longueur3__c +
  Assechmur_Mur1longueur3X2__c +
  Assechmur_Mur2longueur3__c +
  Assechmur_Mur2longueur3X2__c +
  Assechmur_Mur3longueur3__c +
  Assechmur_Mur3longueur3X2__c +
  Assechmur_Mur4longueur3__c +
  Assechmur_Mur4longueur3X2__c +
  Assechmur_Mur5longueur3__c +
  Assechmur_Mur5longueur3X2__c +
  Assechmur_Mur6longueur3__c +
  Assechmur_Mur6longueur3X2__c +
  Assechmur_Mur7longueur3__c +
  Assechmur_Mur7longueur3X2__c +
  Assechmur_Mur8longueur3__c +
  Assechmur_Mur8longueur3X2__c +
  Assechmur_BVI1longueur3__c +
  Assechmur_BVI2longueur3__c +
  Assechmur_BVI3longueur3__c +
  Assechmur_BVI4longueur3__c +
  Assechmur_BVI5longueur3__c +
  Assechmur_BVI6longueur3__c +
  Assechmur_BVI7longueur3__c +
  Assechmur_BVI8longueur3__c = 0,
  NULL,
  Assechmur_Mur1longueur3__c +
  Assechmur_Mur1longueur3X2__c +
  Assechmur_Mur2longueur3__c +
  Assechmur_Mur2longueur3X2__c +
  Assechmur_Mur3longueur3__c +
  Assechmur_Mur3longueur3X2__c +
  Assechmur_Mur4longueur3__c +
  Assechmur_Mur4longueur3X2__c +
  Assechmur_Mur5longueur3__c +
  Assechmur_Mur5longueur3X2__c +
  Assechmur_Mur6longueur3__c +
  Assechmur_Mur6longueur3X2__c +
  Assechmur_Mur7longueur3__c +
  Assechmur_Mur7longueur3X2__c +
  Assechmur_Mur8longueur3__c +
  Assechmur_Mur8longueur3X2__c +
  Assechmur_BVI1longueur3__c +
  Assechmur_BVI2longueur3__c +
  Assechmur_BVI3longueur3__c +
  Assechmur_BVI4longueur3__c +
  Assechmur_BVI5longueur3__c +
  Assechmur_BVI6longueur3__c +
  Assechmur_BVI7longueur3__c +
  Assechmur_BVI8longueur3__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mct sans les coins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>