force-app/main/default/objects/Assechmur_Lignededevis__c/recordTypes/Injection.recordType-meta.xml
<RecordType>
    <fullName>Injection</fullName>
    <active>true</active>
    <label>Injection</label>
</RecordType>