force-app/main/default/objects/Assechmur_Lignededevis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assechmur_Produit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>